> Вынесены константы > Добавлены тесты > Исправлены некоторые замечания "инспектора"

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">SHMinesweeper</string>
     <string name="number_of_mines">Количество мин</string>
     <string name="you_lose">Вы проиграли.</string>
     <string name="you_won">Вы выиграли!</string>
     <string name="new_game">Новая игра</string>
     <string name="overview">Обзор</string>
-    <string name="insturcion">Инструкция</string>
+    <string name="instruction">Инструкция</string>
     <string name="watch_instruction">Открыть инструкцию</string>
     <string name="html">
         <![CDATA[
@@ -30,13 +29,13 @@
     </string>
     <string name="notification_title">Сапёр</string>
     <string name="notification_text">Вы не заходили в игру долгое время. Нам нужен сапёр!</string>
-    <string name="set_field_width_dialog">Установите ширину поля (2-25 мин)</string>
+    <string name="set_field_width_dialog">Установите ширину поля (2–25 мин)</string>
     <string name="set_field_width">Установите ширину поля</string>
     <string name="field_width">Ширина</string>
-    <string name="set_field_height_dialog">Установите высоту поля (2-25 мин)</string>
+    <string name="set_field_height_dialog">Установите высоту поля (2–25 мин)</string>
     <string name="set_field_height">Установите высоту поля</string>
     <string name="field_height">Высота</string>
-    <string name="set_mines_dialog">Установите количество мин (2-100)</string>
+    <string name="set_mines_dialog">Установите количество мин (2–100)</string>
     <string name="set_number_of_mines">Установите количество мин</string>
     <string name="choose_field_mode">Выберите режим поля</string>
     <string name="field_mode">Режим</string>
