- New file hierarchy - Some unfinished classes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="start_game_10">Start Game 10x10</string>
     <string name="appname">Checkers</string>
     <string name="resume">Resume Last</string>
+    <string name="button">Create Custom</string>
 </resources>
