--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,10 +17,7 @@
     <string name="group_number">№ 33531/2</string>
     <string name="student">студент</string>
     <string name="student_name">Сергеев А.А.</string>
-    <string name="teacher">преподаватель</string>
-    <string name="teacher_name">Алексюк А.О.</string>
-
-
-
+    <string name="teacher">преподаватели</string>
+    <string name="teacher_name">Алексюк А.О.\nКузнецов А.Н.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
