--- a/Fahrenheit/app/src/main/res/values/strings.xml
+++ b/Fahrenheit/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">Fahrenheit</string>
+    <string name="start_game">Начать игру</string>
+    <string name="setting">Настройки</string>
+    <string name="progress">Прогресс</string>
+    <string name="end_open_0_6">Концовок открыто 0/6</string>
+    <string name="light_style">Светлый стиль</string>
+    <string name="music_on">Выключить музыку</string>
+    <string name="censor_on">Включить цензуру</string>
+    <string name="first">First</string>
+    <string name="second">Second</string>
+    <string name="third">Third</string>
 
 </resources>
