--- a/Reminder/app/src/main/res/values/strings.xml
+++ b/Reminder/app/src/main/res/values/strings.xml
@@ -7,4 +7,14 @@
 
     <string name="current_task">Current</string>
     <string name="done_task">Done</string>
+
+    <string name="dialog_title">Adding task</string>
+    <string name="dialog_ok">OK</string>
+    <string name="dialog_cancel">Cancel</string>
+    <string name="dialog_error_empty_title">Please, enter the title</string>
+
+    <string name="task_title">Title</string>
+    <string name="task_date">Date</string>
+    <string name="task_time">Time</string>
+
 </resources>
